objects/Metric_Tier_Relation__c.object
<CustomObject>
    <description>Use to define the metric &amp; associate them to individual Tier for a Perfomance cycle</description>
    <fields>
        <fullName>Accept_Attachment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accept Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Benefit_Tier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Benefit Tier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bonus_Requirement__c</fullName>
        <label>Bonus Requirement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Boolean_Metric_Y_N__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Boolean Metric Y/N</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Satisfaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance to Business Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All SPWR solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Child_Metric__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Child_Metric</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enter_Tier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enter Tier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Goal__c</fullName>
        <formula>IF( Boolean_Metric_Y_N__c , 1, IF(ISBLANK( Metric_Min_Value__c ) ,  Metric_Max_Value__c , Metric_Min_Value__c))</formula>
        <label>Goal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HelpText__c</fullName>
        <label>HelpText</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Metric is Inactivated, means is not being used in dashboards.</description>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incentive_Amount__c</fullName>
        <label>Incentive Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Manual_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual_Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market_Add_Row__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Market Add Row</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Metric_Description__c</fullName>
        <label>Metric Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metric_Input_Type__c</fullName>
        <label>Metric Input Type</label>
        <picklist>
            <picklistValues>
                <fullName>Automated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Metric_Label__c</fullName>
        <label>Metric Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metric_Max_Value__c</fullName>
        <label>Metric Max Value</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Metric_Min_Value__c</fullName>
        <label>Metric Min Value</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ParentMetricRelation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Metric Relation</label>
        <referenceTo>Metric_Tier_Relation__c</referenceTo>
        <relationshipLabel>Metric Tier Relations</relationshipLabel>
        <relationshipName>Metric_Tier_Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Part_Of_Composite_Incentive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Part Of Composite Incentive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Performance_Metric__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lookup for Performance Metric</description>
        <label>Performance Metric</label>
        <referenceTo>Performance_Metric__c</referenceTo>
        <relationshipLabel>Metric Tier Relations</relationshipLabel>
        <relationshipName>Metric_Tier_Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sequence_Order__c</fullName>
        <label>Sequence Order</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stay_Tier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stay Tier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Thershold__c</fullName>
        <label>Thershold</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Tier lookup</description>
        <label>Tier</label>
        <referenceTo>Tier__c</referenceTo>
        <relationshipLabel>Metric Tier Relations</relationshipLabel>
        <relationshipName>Metric_Tier_Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isRSMView__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isRSMView</label>
        <type>Checkbox</type>
    </fields>
    <label>Metric Tier Relation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MetricTier-{0000000}</displayFormat>
        <label>Metric Tier Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metric Tier Relations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>